--- a/package.json
+++ b/package.json
@@ -12,8 +12,22 @@
   },
   "author": "griffinna",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/griffinna/nodebird-api/issues"
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
+    "nunjucks": "^3.2.1",
+    "passport": "^0.4.1",
+    "passport-kakao": "1.0.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.2.3",
+    "uuid": "^8.2.0"
   },
-  "homepage": "https://github.com/griffinna/nodebird-api#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  }
 }
